added prompts and inquirer

--- a/package.json
+++ b/package.json
@@ -8,12 +8,16 @@
     "lib": "lib"
   },
   "scripts": {
-    "test": "jest --verbose"
+    "test": "jest --verbose",
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "inquirer": "^8.2.4"
+  },
+  "devDependencies": {
     "jest": "^29.5.0"
   }
 }
